--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 anyio==4.11.0
-APScheduler==3.10.4
+APScheduler==3.6.3
 beautifulsoup4==4.14.2
 cachetools==4.2.2
 certifi==2025.11.12
@@ -12,7 +12,7 @@ numpy==2.3.5
 pandas==2.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
-python-telegram-bot==20.7
+python-telegram-bot==13.15
 pytz==2025.2
 requests==2.32.5
 schedule==1.2.2
@@ -20,6 +20,7 @@ setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
+tornado==6.5.2
 typing_extensions==4.15.0
 tzdata==2025.2
 tzlocal==5.3.1
